# goblin_lite_training

./: .gitignore  README.md  pyproject.toml
data/DATABASE_BATCH/0/: instance_0.db
data/DATABASE_BATCH/0/CBM/generated_input_data/-1/: disturbance_events.csv
data/DATABASE_BATCH/0/CBM/generated_input_data/0/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/0/CBM/generated_input_data/1/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/0/CBM/generated_input_data/2/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/0/CBM/generated_input_data/3/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/0/CBM/generated_input_data/4/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/1/: instance_1.db
data/DATABASE_BATCH/1/CBM/baseline_input_conf/: disturbance_events.csv
data/DATABASE_BATCH/1/CBM/generated_input_data/0/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/1/CBM/generated_input_data/1/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/1/CBM/generated_input_data/2/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/1/CBM/generated_input_data/3/: disturbance_events.csv  inventory.csv
data/DATABASE_BATCH/2/: instance_2.db
data/DATABASE_BATCH/3/: instance_3.db
data/DATABASE_BATCH/4/: instance_4.db
data/input/: scenario_set_0.json  scenario_set_1.json  scenario_set_2.json  scenario_set_3.json  scenario_set_4.json
data/input/forest_config/: cbm_factory.yaml
goblin_lite0_4_2.ipynb/tree/main/: labs
labs/: 0.4.1example2.ipynb  example_1.ipynb  goblin_lite0_4_2.ipynb
(+32 files in other folders)
