[tool.poetry]
package-mode = false  # Disable package mode
name = "goblin_lite_tutorials"
version = "0.1.0"
description = "Tutorials for Goblin Lite"
authors = ["Colm Duffy <colm.duffy@universityofgalway.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
goblin_lite = "^0.4.1"
jupyterlab = "^4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
